added other projects

--- a/desktop.ini
+++ b/desktop.ini
@@ -3,3 +3,8 @@ COMP308W24GroupProject.docx=@COMP308W24GroupProject,0
 COMP308Lab5-Group2_1.docx=@COMP308Lab5-Group2_1,0
 COMP-308_Project_Presentations_-_Guidelines_M2023.docx=@COMP-308_Project_Presentations_-_Guidelines_M2023,0
 COMP308W24Lab5 and_write_up_template.docx=@COMP308W24Lab5 and_write_up_template,0
+COMP-308_Interactive Exercise 8 W24.docx=@COMP-308_Interactive Exercise 8 W24,0
+COMP308W24Lab4.docx=@COMP308W24Lab4,0
+COMp-308_Peer_Evaluation_Form.docx=@COMp-308_Peer_Evaluation_Form,0
+COMP-308_Interactive Exercise 7 W24(1).docx=@COMP-308_Interactive Exercise 7 W24(1),0
+COMP308W24Lab1.docx=@COMP308W24Lab1,0
